--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Calculadora para matemáticas financiera</title>
+    <title>Calculadora cuota de crétido</title>
     <style>
       body
       {
@@ -12,7 +12,7 @@
       </style>
   </head>
   <body>
-    <h1><strong>Calculadora práctica de matemáticas financieras</strong></h1>
+    <h1><strong>Calculadora cuota de crédito</strong></h1>
     <p>Calcula el valor de la cuota constante de tu préstamos, ingresando los siguientes datos</p>
     <p>
       Valor crédito
