cambio de tipo de dato en el ingreso de las cuotas del crédito

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </p>
     <p>
       Períodos
-      <input type="text" id="periodos" value="">
+      <input type="number" id="periodos" value="">
     </p>
     <p>
       <input type="button" id="calcular" value="calcular">
